manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: aristotle-api
  namespace: aristotle-api-staging
  labels:
    app: aristotle-api

spec:
  selector:
    matchLabels:
      app: aristotle-api
  template:
    metadata:
      labels:
        app: aristotle-api
    spec:
      containers:
        - name: aristotle-api
          image: "aristotleplatform.azurecr.io/aristotle-api"
          resources:
            requests:
              memory: "512Mi"
              cpu: "25m"
            limits:
              memory: "1024Mi"
              cpu: "250m"
          ports:
            - name: web
              containerPort: 5000
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 60
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 60
            periodSeconds: 20
      securityContext:
        runAsNonRoot: true
        runAsUser: 3502
        runAsGroup: 3502
