manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "aristotleeducationplatform-034f"
    labels:
        app: "aristotleeducationplatform-034f"
spec:
    type: LoadBalancer
    ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      name: http
    selector:
        app: "aristotleeducationplatform-034f"
